# LinuxTools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  build-appimage.sh  build-deb.sh  main.py  pyproject.toml
elm/cli/elm/: Cargo.toml
elm/cli/elm/src/: main.rs
elm/core/elm-core/: Cargo.toml
elm/core/elm-core/schemas/: elm.channel.v1.schema.json  elm.engine.v1.schema.json  elm.manifest.v1.schema.json  elm.profile.v1.schema.json
elm/core/elm-core/src/: lib.rs
elm/core/elm-core/src/config/: load.rs  mod.rs  models.rs  validate.rs
elm/core/elm-core/src/engine/: install.rs
elm/core/elm-core/src/installer/: mod.rs
elm/core/elm-core/src/prefix/: mod.rs
elm/core/elm-core/src/rollback/: mod.rs  restore.rs  snapshot.rs
elm/core/elm-core/src/runtime/: launch.rs
g13/: .gitignore  .pre-commit-config.yaml  BACKGROUND_IMAGE_SETUP.md  BUTTON_MAPPING_GUIDE.md  BUTTON_MAPPING_STATUS.md  CLAUDE.md  G13LogitechOPS_GITHUB_READY.md  INSTALLATION.md  README.md  RECORDING_SCRIPT.md  TROUBLESHOOTING.md  WORKFLOW_DOCUMENTATION.md  button_monitor.py  capture_buttons.py  capture_hidapi.py  capture_thumb_buttons.py  create_g13_layout.py  debug_hid.py  find_g13_device.sh  find_input_device.sh  g13-linux-gui.sh  g13-linux-launcher.sh  g13-linux.desktop  generate_g13_background.py  generate_polished_g13.py  install-desktop.sh  install.sh  publish.sh  pyproject.toml  test_buttons_sudo.py  test_direct_read.py  test_lcd.py  test_lcd_chunks.py  test_lcd_raw.py  verify_buttons.py
g13/.github/: PULL_REQUEST_TEMPLATE.md
g13/.github/ISSUE_TEMPLATE/: bug_report.md
g13/.github/workflows/: ci.yml  release.yml
g13/assets/: g13_button_map_autodetect.json
g13/data/: g13-linux.desktop
g13/gui-web/: README.md  index.html  package-lock.json  package.json
g13/gui-web/backend/: server.py
g13/gui-web/src/: App.css  App.tsx  index.css  types.ts
g13/gui-web/src/api/: g13Api.ts
g13/gui-web/src/components/: G13Button.tsx  G13Device.css  G13Device.tsx  KeyMappingPanel.tsx  MacroPanel.css  MacroPanel.tsx  index.ts
g13/gui-web/src/hooks/: useG13WebSocket.ts
g13/packaging/appimage/: AppRun  build-appimage.sh  g13-linux.desktop
g13/resources/: g13-linux-gui.desktop
g13/scripts/: e2e_test.sh
g13/src/g13_linux/: __init__.py  _paths.py  cli.py  daemon.py  device.py  mapper.py  server.py  settings.py
g13/src/g13_linux/gui/: main.py
g13/src/g13_linux/gui/controllers/: app_controller.py
g13/src/g13_linux/gui/dialogs/: __init__.py  calibration_dialog.py
g13/src/g13_linux/gui/models/: app_profile_rules.py  event_decoder.py  global_hotkeys.py  joystick_handler.py  macro_manager.py  macro_player.py  macro_recorder.py  macro_types.py  profile_manager.py
g13/src/g13_linux/gui/resources/: g13_layout.py
g13/src/g13_linux/gui/views/: button_mapper.py  hardware_control.py  macro_editor.py  main_window.py  profile_manager.py
g13/src/g13_linux/gui/widgets/: g13_button.py  key_selector.py  macro_record_dialog.py
g13/src/g13_linux/input/: __init__.py  handler.py  navigation.py
g13/src/g13_linux/lcd/: __init__.py  canvas.py  fonts.py  icons.py
g13/src/g13_linux/led/: __init__.py  colors.py  controller.py  effects.py
g13/src/g13_linux/menu/: __init__.py  items.py  manager.py  screen.py
g13/src/g13_linux/menu/screens/: __init__.py  base_menu.py  idle.py  info.py  led_settings.py  macros.py  main_menu.py  profiles.py  settings.py  toast.py
g13/systemd/: g13-ops-user.service  g13-ops.service  install-service.sh
g13/tests/: __init__.py  conftest.py  test_app_profile_rules.py  test_cli.py  test_colors.py  test_device.py  test_gui_main.py  test_key_selector.py  test_lcd.py  test_lcd_canvas.py  test_macro.py  test_macro_recorder.py  test_profile_manager.py  test_settings.py
g13/tools/: g13_calibrate.py
likx/: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  build-appimage.sh  build-flatpak.sh  com.github.aretedriver.likx.yml  install-app.sh  likx.desktop  main.py  pyproject.toml  requirements.txt  setup.sh
likx/.github/ISSUE_TEMPLATE/: bug_report.md
likx/.github/workflows/: ci.yml  codeql.yml  release.yml  tests.yml
likx/AppDir/: .DirIcon  AppRun  likx.desktop
likx/AppDir/opt/likx/: main.py
likx/AppDir/opt/likx/src/: __init__.py  commands.py  editor.py  history.py  hotkeys.py  notification.py  pinned.py  radial_menu.py  ui.py  (+1 more)
likx/debian/: changelog  control  copyright  likx.desktop  rules
likx/docs/: BEFORE_AFTER_COMPARISON.md  CLEANSHOT_COMPARISON.md  COMPREHENSIVE_REVIEW.md  DISTRIBUTION_CHECKLIST.md  DISTRIBUTION_GUIDE.md  EXECUTIVE_SUMMARY.md  FEATURE_SHOWCASE.md  FINAL_PACKAGE_SUMMARY.txt  FINAL_SUMMARY.md  FINAL_VERIFICATION.sh  GET_STARTED.md  IMPLEMENTATION_SUMMARY.md  PREMIUM_FEATURES.md  PUSH_TO_GITHUB.md  QUALITY_ASSURANCE.md  QUICK_START.md  README_BEFORE_PUSH.txt  REPOSITORY_STATUS.txt  START_HERE.md  TESTING_GUIDE.md
likx/flatpak/: com.github.aretedriver.likx.desktop  com.github.aretedriver.likx.metainfo.xml
likx/locale/: likx.pot
likx/locale/de/LC_MESSAGES/: likx.mo  likx.po
likx/locale/es/LC_MESSAGES/: likx.mo  likx.po
likx/locale/fr/LC_MESSAGES/: likx.mo  likx.po
likx/locale/it/LC_MESSAGES/: likx.mo  likx.po
likx/locale/ja/LC_MESSAGES/: likx.mo  likx.po
likx/locale/pt/LC_MESSAGES/: likx.mo  likx.po
likx/locale/ru/LC_MESSAGES/: likx.mo  likx.po
likx/resources/: style.css
likx/scripts/: extract_strings.sh
likx/snap/gui/: likx.desktop
likx/src/: __init__.py  capture.py  clipboard.py  command_palette.py  config.py  editor.py  effects.py  hotkeys.py  i18n.py  ocr.py  queue.py  recorder.py  recording_overlay.py  scroll_capture.py  ui.py  ui_enhanced.py  undo_history.py  uploader.py
likx/src/dialogs/: __init__.py  settings.py
likx/src/mixins/: drawing_mixin.py  input_mixin.py  keyboard_mixin.py  ui_setup_mixin.py
likx/src/widgets/: __init__.py  tab_manager.py
likx/tests/: test_capture.py  test_editor.py  test_hotkeys.py  test_minimap.py  test_ocr.py  test_overlays.py  test_recorder.py  test_recording_overlay.py  test_tray.py  test_ui.py  test_ui_enhanced.py  test_undo_history.py  test_uploader.py
(+100 files in other folders)
