[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "likx"
version = "3.31.0"
description = "GTK3 screenshot tool for Linux with annotation, OCR, and cloud upload"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.9"
authors = [{name = "AreteDriver"}]
keywords = ["screenshot", "annotation", "linux", "gtk", "ocr", "screen-capture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Multimedia :: Graphics :: Editors",
]
dependencies = [
    "pycairo>=1.27.0",
    "numpy>=1.26.0,<3.0.0",
    "opencv-python-headless>=4.10.0",
    "pytesseract>=0.3.10",
]

[project.urls]
Homepage = "https://github.com/AreteDriver/LinuxTools"
Repository = "https://github.com/AreteDriver/LinuxTools"
Issues = "https://github.com/AreteDriver/LinuxTools/issues"

[project.scripts]
likx = "main:main"

[project.optional-dependencies]
upload = ["requests>=2.31.0"]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/ui.py",
    "*/__pycache__/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "UP006",  # Use list instead of List (TODO: migrate typing imports)
    "UP007",  # Use X | Y instead of Union (requires Python 3.10+)
    "UP035",  # Deprecated typing imports (TODO: migrate to builtin generics)
    "UP045",  # Use X | None instead of Optional (requires Python 3.10+)
]
